# sls2-game-agent

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE.md  README.md  README.zh-CN.md  build-and-env.md  package-lock.json  package.json
mcp_server/: .env.example  README.md  REMOTE.md  _stderr.txt  pyproject.toml
mcp_server/data/: README.md
mcp_server/data/knowledge/: README.md
mcp_server/data/knowledge/v1/cards/: ABRASIVE.json  ACCELERANT.json  ACCURACY.json  ACROBATICS.json  ADAPTIVE_STRIKE.json  ADRENALINE.json  AFTERIMAGE.json  AFTERLIFE.json  AGGRESSION.json  ALCHEMIZE.json  ALIGNMENT.json  ALL_FOR_ONE.json  ANGER.json  ANOINTED.json  ANTICIPATE.json  APOTHEOSIS.json  APPARITION.json  ARMAMENTS.json  ARSENAL.json  ASCENDERS_BANE.json  ASHEN_STRIKE.json  ASSASSINATE.json  ASTRAL_PULSE.json  AUTOMATION.json  BACKFLIP.json  BACKSTAB.json  BAD_LUCK.json  BALL_LIGHTNING.json  BANSHEES_CRY.json  BARRAGE.json  BARRICADE.json  BASH.json  BATTLE_TRANCE.json  BEACON_OF_HOPE.json  BEAM_CELL.json  BEAT_DOWN.json  BEAT_INTO_SHAPE.json  BECKON.json  BEGONE.json  BELIEVE_IN_YOU.json  (+562 more)
mcp_server/data/strategies/: README.md
mcp_server/data/strategies/v1/: combat.json  route_strategy.json  run_development.json
mcp_server/src/sts2_agent_runtime/: __init__.py  action_spec.py  agent_context.py  cli.py  client.py  contracts.py  experience.py  knowledge.py  legal_actions.py  llm.py  orchestration.py  policies.py  prompt_builder.py  review.py  route_planning.py  runtime.py  strategy.py  summarize_run.py  validate_knowledge.py
mcp_server/src/sts2_mcp/: __init__.py  client.py  handoff.py  knowledge.py  network_server.py  server.py
mcp_server/tests/: test_agent_runtime.py  test_game_data_tools.py  test_waits.py
(+355 files in other folders)
