[project]
name = "sts2-ai-agent-mcp"
version = "0.8.0"
description = "FastMCP wrapper for the local STS2 AI Agent mod"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.scripts]
sts2-mcp-server = "sts2_mcp.server:main"
sts2-network-mcp-server = "sts2_mcp.network_server:main"
sts2-agent-run = "sts2_agent_runtime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sts2_mcp", "src/sts2_agent_runtime"]

[tool.hatch.build.targets.wheel.force-include]
"data/eng" = "data/eng"
"data/knowledge" = "data/knowledge"
"data/strategies" = "data/strategies"

[tool.hatch.build.targets.sdist.force-include]
"data/eng" = "data/eng"
"data/knowledge" = "data/knowledge"
"data/strategies" = "data/strategies"

[tool.uv]
package = true
